--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,9 +3,97 @@
     padding: 0;
     box-sizing: border-box;
 }
+@mixin Eposition {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    border-radius: 50%;
+}
 body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(205, 115, 223);
+    min-height: 100vh;
+    background-color: rgb(231, 219, 109);
+}
+.clock {
+    width: 350px;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    background: #fff url(../img/clock2.png);
+    background-size: cover;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 18px solid #fff;
+    box-shadow: inset 0 0 30px rgba(0,0,0,.1),
+    0 0 20px rgba(0,0,0,.1);
+    .hour {
+        position: absolute;
+        width: 160px;
+        height: 160px;
+        .hr {
+            width: 160px;
+            height: 160px;
+            @include Eposition();
+        }
+    }
+    .min {
+        position: absolute;
+        width: 190px;
+        height: 190px;
+        .mn {
+            width: 190px;
+            height: 190px;
+            @include Eposition();
+        }
+    }
+    .sec {
+        position: absolute;
+        width: 230px;
+        height: 230px;
+        .sc {
+            width: 230px;
+            height: 230px;
+            @include Eposition();
+        }
+    }
+}
+.clock::before {
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background: #848484;
+    border: 2px solid #fff;
+    z-index: 100;
+    border-radius: 50%;
+}
+.hr::before {
+    content: '';
+    position: absolute;
+    width: 8px;
+    height: 80px;
+    background: #848484;
+    z-index: 10;
+    border-radius: 6px 6px 0 0;
+}
+.mn::before {
+    content: '';
+    position: absolute;
+    width: 4px;
+    height: 94px;
+    background: #d6d6d6;
+    z-index: 11;
+    border-radius: 6px 6px 0 0;
+}
+.sc::before {
+    content: '';
+    position: absolute;
+    width: 2px;
+    height: 155px;
+    background: #ff6767;
+    z-index: 12;
+    border-radius: 6px 6px 0 0;
 }
